	* revolv/scl_gethostbyname.c: Likewise.
	* incl-local/bits/netdb.h: Removed.
	* incl-local/internal/elf-macros.s(NetSWI,NetSWIsimple,NetSWI0,
	NetSWIsimple0): Removed, no longer needed as we're using inline
	assembler now.
	* incl-local/internal/asm_dec.s: Removed socket SWI numbers.
	* incl-local/sys/socket.h: turn socket SWI prototypes into inline
	assembler routines.

Wed Mar 17 00:19:35 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* include/stdlib.h: Replace 'extern __inline' by '__extern_inline'.
	* include/bits/cmathcalls.h: Likewise.
	* include/bits/wchar.h: Likewise.
	* stdlib/atol.c, stdlib/atoll.c, stdlib/atof.c,	stdlib/atoi.c:
	Reverted previous change (r4509).

Fri Mar 12 01:29:34 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* signal/post.c (__write_backtrace): Revert workaround as llvm bug
	#6552 has been solved.

Tue Mar  9 02:46:33 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* signal/post.c (__write_backtrace): Workaround for llvm bug #6552.

Tue Mar  9 02:42:34 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* gcccompat/_b_return.s, gcccompat/_galloca.s, gcccompat/galloca.c
	gcccompat/_eh_support.s, gcccompat/_b_frame.s: Disable code for
	EABI builds.

Tue Mar  9 02:33:58 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/atol.c(atol), stdlib/atoll.c(atoll), stdlib/atof.c(atof),
	stdlib/atoi.c(atoi): Force no-inline when including stdlib.h
	avoiding redefinition.

Sat Mar  6 15:14:41 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	Give UnixLib its own crt0.s (like other runtime libraries have).

	* crt/crt0.s, crt/gcrt0.s: Added (based on what we had in
	gcc/config/arm/(g)crt1-riscos.asm).
	* gen-auto.pl: Add crt0.s and gcrt0.s to the build.
	* sys/_syslib.s: Update comment.

Sun Feb 28 16:47:11 2010  Lee Noar  <leenoar@sky.com>

	Improve profiling support:

	* unix/unix.c(_exit): Call gmon_machine_cleanup() to perform
	any low-level cleanup, rather than have it called by atexit
	handlers.